--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <style>
 body {
 font-family: Arial, sans-serif;
-@@ -12,6 +12,12 @@
 
 #content {
 display: none;
@@ -21,7 +20,7 @@ display: none;
 }
 
 #password-form {
-@@ -37,7 +43,7 @@
+    
 </style>
 </head>
 <body>
@@ -30,7 +29,7 @@ display: none;
 
 <!-- Password Form -->
 <div id="password-form">
-@@ -48,13 +54,14 @@ <h1>Welcome to the website part of the riddle!</h1>
+<h1>Welcome to the website part of the riddle!</h1>
 
 <!-- Protected Content -->
 <div id="content">
