--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <script>
     const correctPassword = "It is reading our thoughts as though they were words on a screen.";
     const redactedPassword = "[REDACTED]";
-    const redactedPasswordResponse = "Bomb"; // Store the value to be displayed when the redacted password is entered
+    const redactedPasswordResponse = "Ragnors"; // The message for the redacted password
+    const specialPassword = "Ragnors"; // New password for the special message
+    const specialPasswordResponse = "Congrats! You completed the trials!"; // Message for the special password
     const form = document.getElementById('passwordForm');
     const passwordInput = document.getElementById('password');
     const errorMessage = document.getElementById('errorMessage');
     const successMessage = document.getElementById('successMessage');
     const successText = document.getElementById('successText');
     const redactedMessage = document.getElementById('redactedMessage');
+    const specialMessage = document.getElementById('specialMessage'); // New div for special message
 
     form.addEventListener('submit', function (e) {
         e.preventDefault(); // Prevent form submission
@@ -18,15 +21,26 @@
             successMessage.style.display = 'block';
             errorMessage.style.display = 'none';
             redactedMessage.style.display = 'none';
+            specialMessage.style.display = 'none';
         } else if (enteredPassword === redactedPassword) {
-            redactedMessage.innerHTML = `<p>You have entered the redacted password! The correct password is: <strong>${redactedPasswordResponse}</strong></p>`;
+            // Display message for the redacted password
+            redactedMessage.innerHTML = `<p>You have entered the redacted password! The correct alternative password is: <strong>${redactedPasswordResponse}</strong></p>`;
             redactedMessage.style.display = 'block';
             successMessage.style.display = 'none';
             errorMessage.style.display = 'none';
+            specialMessage.style.display = 'none';
+        } else if (enteredPassword === specialPassword) {
+            // Display special message for "Ragnors"
+            specialMessage.innerHTML = `<p>${specialPasswordResponse}</p>`;
+            specialMessage.style.display = 'block';
+            successMessage.style.display = 'none';
+            errorMessage.style.display = 'none';
+            redactedMessage.style.display = 'none';
         } else {
             errorMessage.style.display = 'block';
             successMessage.style.display = 'none';
             redactedMessage.style.display = 'none';
+            specialMessage.style.display = 'none';
         }
     });
 </script>
