--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div id="redactedMessage" style="color: blue; display: none;">
-        <p>You have entered the redacted password! The correct alternative password is: <strong>This is the correct alternative password.</strong></p>
+        <p>You have entered the redacted password. Please state the project's name. </p>
     </div>
 
     <div id="specialMessage" style="color: green; display: none;"></div> <!-- New div for special message -->
